@@ -215,8 +215,8 @@ static bool XAinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
   /*if(ic->op == '=' && POINTER_SET(ic) && (unused_A || dying_A) && !operand_in_reg(right, REG_H, ia, i, G) && !operand_in_reg(right, REG_X, ia, i, G))
     return(true); 1 regression test failure (and more due to library) when anabling this */
 
-  /*if(ic->op == RECEIVE && (!ic->next || !(ic->next->op == RECEIVE) || !result_in_X || getSize(operandType(result)) >= 2))
-    return(true); regression test failures when enabling this */
+  if(ic->op == RECEIVE && (!ic->next || !(ic->next->op == RECEIVE) || !result_in_X || getSize(operandType(result)) >= 2))
+    return(true);
 
   return(false);
 }
